--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Example Page</title>
+<title>Home</title>
 </head>
 <body>
 
-<h1>Hello World</h1>
+<h1>You must be 18 or older to access this website.
+If you are not please exit.</h1>
 
 </body>
 </html>
